--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,9 @@
     "@tiptap/extension-image": "^2.26.1",
     "@tiptap/extension-link": "^2.26.1",
     "@tiptap/extension-placeholder": "^2.26.1",
+    "@tiptap/extension-document": "^2.26.1",
+    "@tiptap/extension-paragraph": "^2.26.1",
+    "@tiptap/extension-text": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
     "react": "^19.2.0",
