--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/extension-document": "^2.26.1",
     "@tiptap/extension-image": "^2.26.1",
     "@tiptap/extension-link": "^2.26.1",
-    "@tiptap/extension-placeholder": "^2.26.1",
-    "@tiptap/extension-document": "^2.26.1",
     "@tiptap/extension-paragraph": "^2.26.1",
+    "@tiptap/extension-placeholder": "^2.26.1",
     "@tiptap/extension-text": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-photo-view": "^1.2.7",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
