--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@tiptap/extension-document": "^2.26.1",
     "@tiptap/extension-image": "^2.26.1",
     "@tiptap/extension-link": "^2.26.1",
@@ -18,6 +19,7 @@
     "@tiptap/extension-text": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
+    "antd": "^6.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-photo-view": "^1.2.7",
