--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-text": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
+    "@tanstack/react-query": "^5.59.1",
     "antd": "^6.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
